--- a/experiment.html
+++ b/experiment.html
@@ -53,6 +53,13 @@ function myFunction() {
 }
 </script>
 
+input, select, textarea{
+    color: #000000;
+}
+
+textarea:focus, input:focus {
+    color: #000000;
+}
 input[type=text], select {
   width: 100%;
   padding: 12px 20px;
@@ -82,6 +89,7 @@ div {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
+
 }
 </style>
   </head>
