--- a/telecom.html
+++ b/telecom.html
@@ -50,7 +50,6 @@
 							<li role="presentation"><a href="index.html">Secured Transactions</a></li>
 							<li role="presentation"><a href="experiment.html">Mission Statement</a></li>
 							<li role="presentation"><a href="classify.html">Classify Your Collateral</a></li>
-							<li role="presentation"><a href="telecom.html">Telecommunications</a></li>
 							<li role="presentation"><a href="about.html">About Us</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>						
 						</ul>
@@ -65,7 +64,7 @@
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
 
-        <img src="A9Roundtableart.jpg" style="width:100%">
+        <img src="telecompic.jpg" style="width:100%">
     	</div>
 	</div>
 
@@ -151,11 +150,11 @@
 	<div id="mission">
 		<div class="container">
 			<div class="text-center">
-				<h2>Securing your transaction </h2>
+				<h2>Telecommunications Law</h2>
 				</div>
 				<div class="container">
 			<div class="text-center">
-				<h2>We make sure that your security interest is legitimate and enforceable. In order to do so we must: Classify Your Collateral, Create Your Security Agreement and Attach Your Collateral, and then Perfect Your Security Interest.</h2>
+				<h2>Telecommunications law is the area of law that focuses on radio, satellite, cable TV, boadcasting, and broadband internet. It incorporates legal topics like administrative law, antitrust, to local government regulation, and property law. </h2>
 			</div>
 		<br>
 	</br>
@@ -163,41 +162,52 @@
 </br>
 
 <div class="container">
-				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 					<i class="fa fa-book"></i>
-					<h3>1. Classify Your Collateral</h3>
-					<p>Article 9 uses specific and counerintuitive words and definitions. We can help you figure out exactly what it is your trying to use as collateral.</p>
+					<h3>The Spectrum</h3>
+					<p>The electromagnetic spectrum is owned and controlled by the federal government, specifically the FCC. This means that it is illegal to create certain frequencies if they interfere with the rightful owner's broadcast.</p>
 				</div>
-				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
 					<i class="fa fa-paperclip"></i>
-					<h3>2. Create Your Security Agreement</h3>
-					<p>Once you've classified your collateral, you have to make sure that you have a security agreement and that your collateral attaches to the security agreement. This makes it clear what exactly you have used as collateral.</p>
+					<h3>Cable</h3>
+					<p>The FCC also regulates cable. From forcing cable companies to carry existing broadcast channels to ensuring that they leave cable space for third parties, the FCC is entrenched in how people deliver cable services to consumers.</p>
 				</div>
-				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
+				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
 					<i class="fa fa-plus-square" aria-hidden="true"></i>
-					<h3>3. Perfect Your Security Interest</h3>
-					<p>Once you've classified your collateral and attached it, you need to make sure that your interest is perfected. If it is perfected, this will give you the best chance of ensuring that it is enforceable in the case of bankruptcy.</p>
+					<h3>Telephony</h3>
+					<p>Telephony regulation from the Bell breakup to consumer protection. The FCC touches on topics like federalism, economics, and the complete undoing of their system.</p>
+				</div>
+				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
+					<i class="fa fa-plus-square" aria-hidden="true"></i>
+					<h3>The Internet</h3>
+					<p>Arguably the most important aspect of the FCC's job is regulating the internet. They explore fascinating topics like net neutrality to first amendment questions.</p>
 				</div>
 			</div>
 		</div>
 		<br>
 		</br>
-				<div class="col-md-4">
+				<div class="col-md-3">
 					<!--<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div> -->
 			<div class="card-footer">
-            <a href="classify.html" class="btn btn-primary">Classify Your Collateral</a>
+            <a href="spectrum.html" class="btn btn-primary">The Spectrum</a>
           </div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-3">
 					<!--<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div> -->
 			<div class="card-footer">
-            <a href="classify.html" class="btn btn-primary">Create Your Security Agreement</a>
+            <a href="cable.html" class="btn btn-primary">Cable</a>
           </div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-3">
 					<!--<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div> -->
 			<div class="card-footer">
-            <a href="classify.html" class="btn btn-primary">Perfect Your Security Interest</a>
+            <a href="telephony.html" class="btn btn-primary">Telephony</a>
+          </div>
+          </div>
+				<div class="col-md-3">
+					<!--<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div> -->
+			<div class="card-footer">
+            <a href="internet.html" class="btn btn-primary">The Internet</a>
           </div>
 				</div>
 				
