--- a/spectrum.html
+++ b/spectrum.html
@@ -58,16 +58,7 @@
             </div><!--/.container-->
         </nav><!--/nav-->		
     </header><!--/header-->	
-	<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gQQOSi44qyCCFhg-XArVWcRR4YBYSNelZJDYogYEHWs&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
-	<div>
-		<div class="w3-content" style="max-width:2000px; max-height:1000px">
-
-    <!-- Automatic Slideshow Images -->
-    <!-- <div class=""w3-display-container w3-center"">  -->
-
-        <img src="telecompic.jpg" style="width:100%">
-    	</div>
-	</div>
+	<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gQQOSi44qyCCFhg-XArVWcRR4YBYSNelZJDYogYEHWs&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe> 
 
 	<!--<div class="slider">		
 		<div id="mission-slider">
@@ -148,25 +139,11 @@
 		</div><!--/#about-slider-->
 		<!--/#slider-->
 
-	<div id="mission">
-		<div class="container">
-			<div class="text-center">
-				<h2>Telecommunications Law</h2>
-				</div>
-				<div class="container">
-			<div class="text-center">
-				<h2>Telecommunications law is the area of law that focuses on radio, satellite, cable TV, boadcasting, and broadband internet. It incorporates legal topics like administrative law, antitrust, to local government regulation, and property law. </h2>
-			</div>
-		<br>
-	</br>
-	<br>
-</br>
-
 <div class="container">
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 					<i class="fa fa-book"></i>
-					<h3>The Spectrum</h3>
-					<p>The electromagnetic spectrum is owned and controlled by the federal government, specifically the FCC. This means that it is illegal to create certain frequencies if they interfere with the rightful owner's broadcast.</p>
+					<h3>Command and Control</h3>
+					<p>Does the FCC or Federal Government have a right to own the spectrum. Many disagree. Check out the articles below to determine for yourself.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
 					<i class="fa fa-paperclip"></i>
@@ -191,7 +168,7 @@
 				<div class="col-md-3">
 					<!--<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div> -->
 			<div class="card-footer">
-            <a href="spectrum.html" class="btn btn-primary">The Spectrum</a>
+            <a href="spectrum.html" class="btn btn-primary">Command and Control</a>
           </div>
 				</div>
 				<div class="col-md-3">
