--- a/spectrum.html
+++ b/spectrum.html
@@ -143,22 +143,22 @@
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 					<i class="fa fa-book"></i>
 					<h3>Command and Control</h3>
-					<p>Does the FCC or Federal Government have a right to own the spectrum. Many disagree. Check out the articles below to determine for yourself.</p>
+					<p>Does the FCC or Federal Government have a right to own the spectrum? Many disagree. Check out the articles below to determine for yourself.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
 					<i class="fa fa-paperclip"></i>
-					<h3>Cable</h3>
-					<p>The FCC also regulates cable. From forcing cable companies to carry existing broadcast channels to ensuring that they leave cable space for third parties, the FCC is entrenched in how people deliver cable services to consumers.</p>
+					<h3>1st Amendment Issues</h3>
+					<p>From Pacifica, the Court rules that the FCC can censor speech. Read the cases below to get the arguments on both sides.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
 					<i class="fa fa-plus-square" aria-hidden="true"></i>
-					<h3>Telephony</h3>
-					<p>Telephony regulation from the Bell breakup to consumer protection. The FCC touches on topics like federalism, economics, and the complete undoing of their system.</p>
+					<h3>Licensing Process</h3>
+					<p>The FCC has had many different ways of handling licenses throughout the ages. Read some of the excerpts and testimonies below to find out more.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
 					<i class="fa fa-plus-square" aria-hidden="true"></i>
-					<h3>The Internet</h3>
-					<p>Arguably the most important aspect of the FCC's job is regulating the internet. They explore fascinating topics like net neutrality to first amendment questions.</p>
+					<h3>The Auction/Allocation Process</h3>
+					<p>The FCC has taken many different approaches to ensuring that the spectrum is split up fairly and in a way to promote competition. Has it worked?</p>
 				</div>
 			</div>
 		</div>
@@ -174,19 +174,19 @@
 				<div class="col-md-3">
 					<!--<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div> -->
 			<div class="card-footer">
-            <a href="cable.html" class="btn btn-primary">Cable</a>
+            <a href="cable.html" class="btn btn-primary">1st Amendment</a>
           </div>
 				</div>
 				<div class="col-md-3">
 					<!--<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div> -->
 			<div class="card-footer">
-            <a href="telephony.html" class="btn btn-primary">Telephony</a>
+            <a href="telephony.html" class="btn btn-primary">Licensing</a>
           </div>
           </div>
 				<div class="col-md-3">
 					<!--<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div> -->
 			<div class="card-footer">
-            <a href="internet.html" class="btn btn-primary">The Internet</a>
+            <a href="internet.html" class="btn btn-primary">Allocation</a>
           </div>
 				</div>
 				
