--- a/spectrum.html
+++ b/spectrum.html
@@ -58,6 +58,12 @@
             </div><!--/.container-->
         </nav><!--/nav-->		
     </header><!--/header-->	
+    <div class="container">
+
+    <!-- Jumbotron Header -->
+    <header class="jumbotron my-4">
+      <h1 class="display-3"><FONT COLOR="#000000">The Spectrum</h1>
+      </header>
 	<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gQQOSi44qyCCFhg-XArVWcRR4YBYSNelZJDYogYEHWs&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe> 
 
 	<!--<div class="slider">		
