--- a/spectrum.html
+++ b/spectrum.html
@@ -148,7 +148,7 @@
 <div class="container">
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 					<i class="fa fa-book"></i>
-					<h3>Command and Control</h3>
+					<h3>How to Regulate</h3>
 					<p>Does the FCC or Federal Government have a right to own the spectrum? Many disagree. Check out the articles below to determine for yourself.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
@@ -174,7 +174,7 @@
 				<div class="col-md-3">
 					<!--<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div> -->
 			<div class="card-footer">
-            <a href="spectrum.html" class="btn btn-primary">Command and Control</a>
+            <a href="howtoregulatespectrum.html" class="btn btn-primary">How to Regulate</a>
           </div>
 				</div>
 				<div class="col-md-3">
