--- a/telecom.html
+++ b/telecom.html
@@ -49,7 +49,7 @@
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation"><a href="index.html">Secured Transactions</a></li>
 							<li role="presentation"><a href="experiment.html">Mission Statement</a></li>
-							<li role="presentation"><a href="classify.html">Classify Your Collateral</a></li>
+							<li role="presentation"><a href="telecom.html">Telecommunications</a></li>
 							<li role="presentation"><a href="about.html">About Us</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>						
 						</ul>
@@ -186,6 +186,8 @@
 		</div>
 		<br>
 		</br>
+		
+<iframe src='https://cdn.knightlab.com/libs/timeline/latest/embed/?source=1cWqQBZCkX9GpzFtxCWHoqFXCHg-ylTVUWlnrdYMzKUI&font=Bevan-PotanoSans&maptype=toner&width=600&height=600' width='600' height='600' frameborder='0'></iframe>
 				<div class="col-md-3">
 					<!--<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div> -->
 			<div class="card-footer">
