--- a/howtoregulatespectrum.html
+++ b/howtoregulatespectrum.html
@@ -76,7 +76,13 @@
   </div>
         </header>
 
-
+  <div id="mission">
+    <div class="container">
+      <div class="text-left">
+        <h2>Coase argued that there should be different regulatory schemes as different approaches had different pros and cons. His argument was rejected by the FCC, but his testimony still serves an important role in understanding how the FCC approaches the Spectrum.</h2>
+      </div>
+    </div>
+  </div>
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-150">
           <div class="card-body">
