--- a/howtoregulatespectrum.html
+++ b/howtoregulatespectrum.html
@@ -74,6 +74,37 @@
         <img src="emspectrum.jpg" style="width:100%">
       </div>
   </div>
+  <div class="col-lg-3 col-md-6 mb-4">
+        <div class="card h-150">
+          <div class="card-body">
+            <h4 class="card-title">It's a physical thing, but I can't really move it.</h4>
+            <p class="card-text">If it is a house, or something that can't be moved without causing damage, it's probably a Fixture. If it is more similar to a to a mineral in the ground like oil, rare earth metals, then you might have what article 9 calls "as-extracted collateral" </p>
+          </div>
+          <div class="card-footer">
+            <a href="fixtures.html" class="btn btn-primary">I think it might be a fixture</a>
+          </div>
+           <div class="card-footer">
+           <a href="contact.html" class="btn btn-primary">I'm not sure I'd like to know more.</a>
+          </div>
+        </div>
+      </div>
+
+
+     <div class="col-lg-4 col-md-6 mb-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <h4 class="card-title">It's intangible</h4>
+            <p class="card-text">It's not really something I can hold or move. It may be a right to a good or a right to a payment. It may be a software or intellectual property.</p>
+          </div>
+          <div class="card-footer">
+            <a href="intangibles.html" class="btn btn-primary">That sounds like me.</a>
+          </div>
+           <div class="card-footer">
+      <a href="contact.html" class="btn btn-primary">I'm not sure I'd like to know more.</a>
+          </div>
+        </div>
+      </div>  
+   
         </header>
 
   <div id="mission">
