--- a/howtoregulatespectrum.html
+++ b/howtoregulatespectrum.html
@@ -64,7 +64,7 @@
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
       <h1 class="display-3"><FONT COLOR="#000000">The Spectrum</h1>
-      <h2>The Electromagnetic spectrum is a naturally existing limit in the field of physics. The Federal Government has claimed a property right in the spectrum which they license out to different businesses, organization, and people. </h2>
+      <h2>The Electromagnetic spectrum is the naturally existing frequencies in the field of physics related to waves. The Federal Government has claimed a property right in the spectrum which they license out to different businesses, organization, and people. </h2>
       <div>
     <div class="w3-content" style="max-width:2000px; max-height:1000px">
 
@@ -74,49 +74,8 @@
         <img src="emspectrum.jpg" style="width:100%">
       </div>
   </div>
-  <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-150">
-          <div class="card-body">
-            <h4 class="card-title">It's a physical thing, but I can't really move it.</h4>
-            <p class="card-text">If it is a house, or something that can't be moved without causing damage, it's probably a Fixture. If it is more similar to a to a mineral in the ground like oil, rare earth metals, then you might have what article 9 calls "as-extracted collateral" </p>
-          </div>
-          <div class="card-footer">
-            <a href="fixtures.html" class="btn btn-primary">I think it might be a fixture</a>
-          </div>
-           <div class="card-footer">
-           <a href="contact.html" class="btn btn-primary">I'm not sure I'd like to know more.</a>
-          </div>
-        </div>
-      </div>
-
-
-     <div class="col-lg-4 col-md-6 mb-4">
-        <div class="card h-100">
-          <div class="card-body">
-            <h4 class="card-title">It's intangible</h4>
-            <p class="card-text">It's not really something I can hold or move. It may be a right to a good or a right to a payment. It may be a software or intellectual property.</p>
-          </div>
-          <div class="card-footer">
-            <a href="intangibles.html" class="btn btn-primary">That sounds like me.</a>
-          </div>
-           <div class="card-footer">
-      <a href="contact.html" class="btn btn-primary">I'm not sure I'd like to know more.</a>
-          </div>
-        </div>
-      </div>  
-   
-        </header>
-
-  <div id="mission">
-    <div class="container">
-      <div class="text-left">
-        <h2>Coase argued that there should be different regulatory schemes as different approaches had different pros and cons. His argument was rejected by the FCC, but his testimony still serves an important role in understanding how the FCC approaches the Spectrum.</h2>
-      </div>
-    </div>
-  </div>
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-150">
-          <div class="card-body">
+  
+         <div class="col-md-3">
             <h4 class="card-title">Command and Control</h4>
             <p class="card-text">Command and Control is the regulatory scheme currently in place. It involves licensing out certain parts of the spectrum. Coase argued that this has its downfalls because it does incentivize new technology and companies benefit from the status quo. There are some areas where it's worthwhile but its limited.</p>
           </div>
@@ -124,20 +83,18 @@
       </div>
 
 
-     <div class="col-lg-4 col-md-6 mb-4">
-        <div class="card h-100">
-          <div class="card-body">
+        <div class="col-md-3">
             <h4 class="card-title">Exclusive Use Model</h4>
             <p class="card-text">Exclusive us model would give a licensee the exclusive and transferrable right to use parts of the spectrum in certain georgaphical areas. This approach motivates innovation, has a flexible rules, and also market forces to run their course to drive prices down.</p>
           </div>
       </div>  
-     <div class="col-lg-3 col-md-8 mb-4">
-        <div class="card h-100">
-          <div class="card-body">
+       <div class="col-md-3">
             <h4 class="card-title">Commons or Open Access Model</h4>
               <p class="card-text">Allows unlimited numbers of unlicensed users to share frequencies, with usage rights that are governed by technical standards or etiquettes but with no right to protection from interference. this is ideal for rural areas where there is no need to command, control, or license.</p> 
         </div>
       </div>
+      <br>
+    </br>
 
 
     </div>
