--- a/howtoregulatespectrum.html
+++ b/howtoregulatespectrum.html
@@ -74,13 +74,14 @@
         <img src="emspectrum.jpg" style="width:100%">
       </div>
   </div>
+
+  <header class="jumbotron my-4">
     <div class="container">
          <div class="col-md-3">
             <h4 class="card-title">Command and Control</h4>
             <p class="card-text">Command and Control is the regulatory scheme currently in place. It involves licensing out certain parts of the spectrum. Coase argued that this has its downfalls because it does incentivize new technology and companies benefit from the status quo. There are some areas where it's worthwhile but its limited.</p>
           </div>
-        </div>
-      </div>
+        
 
 
         <div class="col-md-3">
@@ -94,7 +95,8 @@
               <p class="card-text">Allows unlimited numbers of unlicensed users to share frequencies, with usage rights that are governed by technical standards or etiquettes but with no right to protection from interference. this is ideal for rural areas where there is no need to command, control, or license.</p> 
         </div>
       </div>
-      <br>
+    </header>   
+  <br>
     </br>
 
 
