--- a/howtoregulatespectrum.html
+++ b/howtoregulatespectrum.html
@@ -79,20 +79,20 @@
     <div class="container">
          <div class="col-md-3">
             <h4 class="card-title">Command and Control</h4>
-            <p class="card-text">Command and Control is the regulatory scheme currently in place. It involves licensing out certain parts of the spectrum. Coase argued that this has its downfalls because it does incentivize new technology and companies benefit from the status quo. There are some areas where it's worthwhile but its limited.</p>
+            <p class="card-text"><FONT COLOR="#000000">Command and Control is the regulatory scheme currently in place. It involves licensing out certain parts of the spectrum. Coase argued that this has its downfalls because it does incentivize new technology and companies benefit from the status quo. There are some areas where it's worthwhile but its limited.</p>
           </div>
         
 
 
         <div class="col-md-3">
             <h4 class="card-title">Exclusive Use Model</h4>
-            <p class="card-text">Exclusive us model would give a licensee the exclusive and transferrable right to use parts of the spectrum in certain georgaphical areas. This approach motivates innovation, has a flexible rules, and also market forces to run their course to drive prices down.</p>
+            <p class="card-text"><FONT COLOR="#000000">Exclusive us model would give a licensee the exclusive and transferrable right to use parts of the spectrum in certain georgaphical areas. This approach motivates innovation, has a flexible rules, and also market forces to run their course to drive prices down.</p>
           </div>
-      </div>  
+
 
        <div class="col-md-3">
             <h4 class="card-title">Commons or Open Access Model</h4>
-              <p class="card-text">Allows unlimited numbers of unlicensed users to share frequencies, with usage rights that are governed by technical standards or etiquettes but with no right to protection from interference. this is ideal for rural areas where there is no need to command, control, or license.</p> 
+              <p class="card-text"><FONT COLOR="#000000">Allows unlimited numbers of unlicensed users to share frequencies, with usage rights that are governed by technical standards or etiquettes but with no right to protection from interference. this is ideal for rural areas where there is no need to command, control, or license.</p> 
         </div>
       </div>
     </header>   
