--- a/howtoregulatespectrum.html
+++ b/howtoregulatespectrum.html
@@ -21,6 +21,10 @@
     <![endif]-->
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123150229-1"></script>
+<script .paddingBetweenCols td
+{
+    padding:0 15px 0 15px;
+} </script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -85,8 +89,9 @@
 
 
         <div class="col-md-3">
+          <td style="padding: 10px 10px 10px 10px;">
             <h4 class="card-title">Exclusive Use Model</h4>
-            <p class="card-text"><FONT COLOR="#000000">Exclusive us model would give a licensee the exclusive and transferrable right to use parts of the spectrum in certain georgaphical areas. This approach motivates innovation, has a flexible rules, and also market forces to run their course to drive prices down.</p>
+            <p class="card-text"><FONT COLOR="#000000">Exclusive us model would give a licensee the exclusive and transferrable right to use parts of the spectrum in certain georgaphical areas. This approach motivates innovation, has a flexible rules, and also market forces to run their course to drive prices down.</p></td>
           </div>
 
 
