--- a/howtoregulatespectrum.html
+++ b/howtoregulatespectrum.html
@@ -80,6 +80,7 @@
   </div>
 
   <header class="jumbotron my-4">
+   <center> <h1> Three Different Approaches</h1><center>
     <div class="container">
          <div class="col-md-3">
             <h4 class="card-title">Command and Control</h4>
